# lant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: options.cmake  setup_pkg.cmake
src/: CMakeLists.txt  config.hpp  engine.cpp  engine.hpp  grid.cpp  grid.hpp  main.cpp  ui.cpp  ui.hpp
